--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,6 +14,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -21,6 +22,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <button class="btn btn-outline-danger">Delete</button>
+            </td>
           </tr>
         <% } %>
         </tbody>
