--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -8,7 +8,6 @@
     --primary-color: #1c2331;
     --accent-color: #3E4551;
     --font-color: #f5f5f5;
-    --secondary-color: #3F729B;
     --cell-color: #1c2a48;
   }
   body {
@@ -24,42 +23,12 @@
     background-color: var(--cell-color);
   }
   .card-header {
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
   }
   .card {
     background-color: var(--accent-color);
   }
-.action-button {
-  position: relative;
-  padding: 5px 15px;
-  margin: 0px 7px 7px 7px;
-  border-radius: 10px;
-  font-family: "itc-benguiat",serif;
-  font-size: 18px;
-  color: var(--xcore-font-color);
-}
-.green {
-  background: linear-gradient(to bottom, #11cc21, #00470c);
-  border-bottom: 3px solid #4e606e;
-}
-.red {
-  background: linear-gradient(to bottom, #be1010, #490e0e);
-  border-bottom: 3px solid #4e606e;
-}
-.orange {
-  background-color: #dd7834;
-  border-bottom: 3px solid #4e606e;
-}
-.blue {
-  background: linear-gradient(to bottom, #0ebbbb, #033380);
-  border-bottom: 3px solid #4e606e;
-}
-.action-button:active {
-  transform: translate(0px, 5px);
-  -webkit-transform: translate(0px, 5px);
-  -moz-transform: translate(0px, 5px);
-  border-bottom: 1px solid;
-}
+
 main.my-form {
   width: 100%;
   max-width: 675px;
