--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,6 +15,7 @@
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
           <th scope="col"></th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -22,6 +23,11 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="GET" action="/urls/<%= url %>">
+                <button class="btn btn-outline-primary">Edit</button>
+              </form>
+            </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button class="btn btn-outline-danger">Delete</button>
