--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <%- include('partials/_head') %>
-  <title>URL - TinyApp Example</title>
+    <title>URL - TinyApp Example</title>
 </head>
-
 <body>
+  <%- include('partials/_header') %>
 
   <div class="card text-center">
-      <div class="card-header"></div>
+    <div class="card-header">
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <h5 class="card-title">TinyURL for: <%= longURL %>
+        </h5>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>">
+            <%= shortURL %>
+          </a></p>
       </div>
-    <div class="card-footer text-muted"></div>
+    </div>
+    
+
+    <div class="card-footer text-muted">
+      <div class="card-body">
+        <form method="POST" action="/urls/<%= shortURL %>">
+          <h2 style="color: #f5f5f5;">Edit</h2>
+          <label for="longURL" style="color: #f5f5f5;">New URL:</label>
+          <input type="text" name="longURL" placeholder="http://" style="margin: 5px; padding: 5px;">
+          <button type="submit" class="btn btn-outline-primary">Submit</button>
+        </form>
+      </div>
+    </div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
