--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,9 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success" style="background: linear-gradient(to bottom, rgb(10, 187, 157), #345);">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success"
+    style="background: linear-gradient(to bottom, rgb(10, 187, 157), #345);">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -10,5 +12,17 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) { %>
+      <div class="justify-content-end pr-3"></div>
+      <form action="/login" method="POST">
+        <input type="text" name="username" />
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+      </div>
+      <%} else {%>
+        <span>
+          <%= username %>
+        </span>
+        <% } %>
   </nav>
 </header>
