--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,7 @@
             <td><%= urls[url] %></td>
             <td>
               <form method="GET" action="/urls/<%= url %>">
-                <button class="btn btn-outline-primary">Edit</button>
+                <button class="btn btn-outline-warning">Edit</button>
               </form>
             </td>
             <td>
