commit fixes to cookie session

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,8 +14,8 @@
     </div>
     <div class="justify-content-end pr-3">
       <div class="row pt-1">
-        <% if (username) { %>
-          <h4 class="mr-3 pt-1" style="color: white;"><%= username %></h4>
+        <% if (user) { %>
+          <h4 class="mr-3 pt-1" style="color: white;"><%= user %></h4>
           <form action="/logout" method="POST">
             <button type="submit" class="btn btn-outline-warning">Logout</button>
           </form>
