--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -4,32 +4,84 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <link rel="stylesheet" href="../../assets/styles.css">
 <style>
-  html {
-    --primary-color: #1c2331;
-    --accent-color: #3E4551;
-    --font-color: #f5f5f5;
-    --cell-color: #1c2a48;
-  }
-  body {
-    background-color: var(--primary-color);
-    color: var(--font-color);
-    font-family: "itc-benguiat",serif;
-    font-size: 16px;
-  }
-  .table {
-    background-color: var(--accent-color);
-  }
-  tr {
-    background-color: var(--cell-color);
-  }
-  .card-header {
-    background-color: var(--accent-color);
-  }
-  .card {
-    background-color: var(--accent-color);
-  }
+html {
+  --primary-color: #1c2331;
+  --accent-color: #3E4551;
+  --font-color: #f5f5f5;
+  --cell-color: #1c2a48;
+}
 
-main.my-form {
+body {
+  background-color: var(--primary-color);
+  color: var(--font-color);
+  font-family: "itc-benguiat",serif;
+  font-size: 16px;
+  width: 100vw;
+  height: 100vh;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.table {
+  background-color: var(--accent-color);
+}
+
+tr {
+  background-color: var(--cell-color);
+}
+
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.box {
+  position: absolute;
+  right: 35%;
+  bottom: 25%;
+  justify-content: center;
+  align-items: center;
+  min-width: 480px;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 480px;
+  min-height: 360px;
+  background-color: var(--accent-color);
+  padding-bottom: 3rem;
+}
+
+.card-body {
+  width: 100%;
+  justify-content: center;
+  padding-top: 5rem;
+}
+
+.card-header {
+  width: 100%;
+  background-color: var(--cell-color);
+}
+
+main {
+  justify-content: center;
   width: 100%;
   max-width: 675px;
   padding: 1rem;
