commit fixes to registration

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -80,10 +80,30 @@ tr {
   background-color: var(--cell-color);
 }
 
+.container-header {
+  width: 100%;
+  background-color: var(--cell-color);
+}
+
+.container-body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  background-color: var(--accent-color);
+  padding-top: 1rem;
+}
+
+.container-footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 1rem;
+}
+
 main {
   justify-content: center;
   width: 100%;
-  max-width: 675px;
   padding: 1rem;
   margin: auto;
 } 
