--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,35 +9,41 @@
   <% if (user) { %>
 
   <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for(let url in urls) { %>
+    <div class="container">
+      <h3>My URLs</h3>
+      <table class="table">
+        <thead>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td>
-              <form method="GET" action="/urls/<%= url %>">
-                <button class="btn btn-outline-warning">Edit</button>
-              </form>
-            </td>
-            <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
-                <button class="btn btn-outline-danger">Delete</button>
-              </form>
-            </td>
+            <th scope="col">Short URL</th>
+            <th scope="col">Long URL</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
           </tr>
-        <% } %>
+        </thead>
+        <tbody>
+          <% for(let url in urls) { %>
+            <tr>
+              <td>
+                <%= url %>
+              </td>
+              <td>
+                <%= urls[url] %>
+              </td>
+              <td>
+                <form method="GET" action="/urls/<%= url %>">
+                  <button class="btn btn-outline-warning">Edit</button>
+                </form>
+              </td>
+              <td>
+                <form method="POST" action="/urls/<%= url %>/delete">
+                  <button class="btn btn-outline-danger">Delete</button>
+                </form>
+              </td>
+            </tr>
+            <% } %>
         </tbody>
-    </table>
+      </table>
+    </div>
   </main>
   <% } %>
   <!-- Bootstrap JS -->
