--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,29 +10,34 @@
   <%- include('partials/_header') %>
   <% if (user) { %>
 
-  <div class="card text-center">
-    <div class="card-header">
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %>
+  <div class="container pt-4 text-center">
+    <div class="container-header">
+      <div class="container-body">
+        <h5 class="container-title">TinyURL for: <%= longURL %>
         </h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>">
+        <p class="container-text">Short URL: <a href="/u/<%= shortURL %>">
             <%= shortURL %>
           </a></p>
       </div>
     </div>
-    
-
-    <div class="card-footer text-muted">
-      <div class="card-body">
-        <form method="POST" action="/urls/<%= shortURL %>">
+  
+    <div class="container-footer">
+      <form method="POST" action="/urls/<%= shortURL %>">
+        <div class="container">
           <h2 style="color: #f5f5f5;">Edit</h2>
-          <label for="longURL" style="color: #f5f5f5;">New URL:</label>
+        </div>
+        <label for="longURL" style="color: #f5f5f5;">New URL:</label>
+  
+        <div class="container-footer">
           <input type="text" name="longURL" placeholder="http://" style="margin: 5px; padding: 5px;">
           <button type="submit" class="btn btn-outline-primary">Submit</button>
-        </form>
-      </div>
+        </div>
+  
+  
+      </form>
     </div>
   </div>
+
   
   <% } %>
   <!-- Bootstrap JS -->
